# kawaflow

./: .dockerignore  .env.example  .gitignore  .repomixignore  AGENTS.md  GEMINI.md  README.md  TODO.md  Taskfile.yml  compose.yml  npm.Taskfile.yml  package-lock.json  package.json  plan.md  repomix.config.json
.codex/: config.toml
.gemini/: settings.json
.sandbox/: .env.example  Dockerfile  compose.yml  php.ini  vimrc  zshrc
docs/: Dockerfile  Taskfile.yml  mkdocs.yml
e2e/: .dockerignore  AGENTS.md  Dockerfile  Taskfile.yml  compose.yml  pyproject.toml  scenraios.json
e2e/scripts/: report_template.html  run_e2e_with_report.py
e2e/tests/: conftest.py  test_flow_lifecycle.py  test_scenarios.py
e2e/tests/fixtures/: clients.py
e2e/tests/helpers/: config.py  docker_observer.py  graph_validation.py
flow-manager/: .dockerignore  Dockerfile  Taskfile.yml  container_manager.py  event_handler.py  main.py  main.py.template  messaging.py  models.py  pyproject.toml  rabbitmq_client.py  sensivity_filter.py  socket_communication_handler.py  socket_event_handler.py  system_logger.py  user_activity_logger.py
flow-manager/tests/: conftest.py  test_app_integration.py  test_container_manager.py  test_container_status_monitoring.py  test_data_models_validation.py  test_enhanced_health_checks.py  test_event_handler.py  test_integration_complete.py  test_main.py  test_model_edge_cases.py  test_models.py  test_resource_monitoring_socket_events.py  test_resource_usage_monitoring.py  test_sensivity_filter.py  test_socket_communication_handler.py  test_socket_event_handlers.py  test_socket_io_asgi_integration.py  test_system_logger.py  test_task_verifications.py  test_user_activity_logger.py  test_user_activity_logger_demo.py
flow-template/: Dockerfile  (+4 more)
(+157 files in other folders)
