[project]
name = "flow-manager"
version = "0.0.1"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "python-socketio>=5.13.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "python-socketio[client]>=5.13.0",
    "ruff>=0.12.3",
    "ty>=0.0.1a14",
]
