[project]
name = "flow-manager"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.35",
    "aio-pika>=9.5",
    "docker>=7.1",
    "pydantic>=2.11",
    "httpx>=0.28",
]

[dependency-groups]
dev = [
    "pytest>8.4",
    "pytest-asyncio>=1.0",
    "ruff>=0.12.3",
    "ty>=0.0.1a14",
]

[tool.ruff]
line-length = 88

[tool.mypy]
ignore_missing_imports = true
